--- a/kontakt.html
+++ b/kontakt.html
@@ -23,7 +23,7 @@
 </style>
 
 	<h1 style="text-align: center"> <a href="mojastranka.html"> <img src="https://www.freepnglogos.com/uploads/logo-home-png/house-silhouette-home-buildings-houses-home-silhouette-15.png" style="width:35px;height:35px;display: block;
-  margin-left:0 ;"></a> Kontakty</h1>
+  margin-left:0 ;"></a> Ahojda</h1>
 </head>
 <body style="background: linear-gradient(white, #0088cc);">
 	<form style="margin: auto; width: 150px;" action="https://httpbin.org/post" method="POST">
